Add main layout

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,43 +1,42 @@
 {
-  "compilerOptions": {
-    "moduleResolution": "node",
-    "module": "ESNext",
-    "target": "ESNext",
-    "jsx": "react-jsx",
-    "baseUrl": ".",
-    "paths": {
-      "&shared/*": ["./src/shared/*"],
-      "&entities/*": ["./src/entities/*"],
-      "&features/*": ["./src/features/*"],
-      "&widgets/*": ["./src/widgets/*"],
-      "&pages/*": ["./src/pages/*"],
-    },
-    "lib": ["ESNext", "DOM"],
-    "resolveJsonModule": true,
-    "outDir": "./dist",
-    "removeComments": true,
-    "isolatedModules": true,
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true,
-    "incremental": true,
-    "tsBuildInfoFile": "./dist/tsconfig.tsbuildinfo",
+	"compilerOptions": {
+		"moduleResolution": "node",
+		"module": "ESNext",
+		"target": "ESNext",
+		"jsx": "react-jsx",
+		"baseUrl": ".",
+		"paths": {
+			"&shared/*": ["./src/shared/*"],
+			"&entities/*": ["./src/entities/*"],
+			"&features/*": ["./src/features/*"],
+			"&widgets/*": ["./src/widgets/*"]
+		},
+		"lib": ["ESNext", "DOM"],
+		"resolveJsonModule": true,
+		"outDir": "./dist",
+		"removeComments": true,
+		"isolatedModules": true,
+		"allowSyntheticDefaultImports": true,
+		"esModuleInterop": true,
+		"forceConsistentCasingInFileNames": true,
+		"skipLibCheck": true,
+		"incremental": true,
+		"tsBuildInfoFile": "./dist/tsconfig.tsbuildinfo",
 
-    "strict": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "strictBindCallApply": true,
-    "strictPropertyInitialization": true,
-    "noImplicitThis": true,
-    "useUnknownInCatchVariables": true,
-    "alwaysStrict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "exactOptionalPropertyTypes": true,
-    "noImplicitReturns": true,
-    "noUncheckedIndexedAccess": true,
-  },
-  "exclude": ["node_modules", "dist"],
+		"strict": true,
+		"noImplicitAny": true,
+		"strictNullChecks": true,
+		"strictFunctionTypes": true,
+		"strictBindCallApply": true,
+		"strictPropertyInitialization": true,
+		"noImplicitThis": true,
+		"useUnknownInCatchVariables": true,
+		"alwaysStrict": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"exactOptionalPropertyTypes": true,
+		"noImplicitReturns": true,
+		"noUncheckedIndexedAccess": true
+	},
+	"exclude": ["node_modules", "dist"]
 }
