--- a/package.json
+++ b/package.json
@@ -1,33 +1,51 @@
 {
 	"name": "hyle-web-client",
 	"version": "1.0.0",
-	"main": "src/main.ts",
-	"scripts": {},
+	"main": "src/main.tsx",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"serve": "vite preview",
+		"start": "vite"
+	},
 	"author": "",
 	"type": "module",
 	"license": "ISC",
 	"devDependencies": {
-		"@tanstack/router-devtools": "^1.34.0",
+		"@tanstack/router-devtools": "^1.34.4",
 		"@tanstack/router-vite-plugin": "^1.33.12",
+		"@types/node": "^20.14.8",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
 		"@typescript-eslint/eslint-plugin": "^7.10.0",
 		"@typescript-eslint/parser": "^7.10.0",
+		"@typescript-eslint/utils": "^7.10.0",
+		"@vitejs/plugin-react": "^4.3.1",
+		"autoprefixer": "^10.4.19",
 		"eslint": "^8.57.0",
 		"eslint-plugin-effector": "0.12.0",
+		"postcss": "^8.4.38",
 		"prettier": "^3.2.5",
-		"@typescript-eslint/utils": "^7.10.0",
+		"tailwindcss": "^3.4.4",
 		"typescript": "^5.4.5",
-		"vite": "^5.2.11"
+		"vite": "^5.2.11",
+		"vite-tsconfig-paths": "^4.3.2"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.4.2",
+		"@tailwindcss/container-queries": "^0.1.1",
 		"@tanstack/react-router": "^1.34.0",
 		"axios": "^1.7.2",
+		"clsx": "^2.1.1",
 		"dayjs": "^1.11.11",
 		"effector": "^23.2.2",
 		"effector-react": "^23.2.1",
 		"patronum": "^2.2.0",
 		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.51.5",
+		"tailwind-merge": "^2.3.0",
+		"vite-plugin-svgr": "^4.2.0",
 		"zod": "^3.23.8"
 	}
 }
