--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"dayjs": "^1.11.11",
 		"effector": "^23.2.2",
 		"effector-react": "^23.2.1",
+		"firebase": "^11.0.1",
 		"patronum": "^2.2.0",
 		"react": "^18.3.1",
 		"react-day-picker": "^9.0.8",
