--- a/package.json
+++ b/package.json
@@ -46,22 +46,28 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.4.2",
+		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-scroll-area": "^1.1.0",
 		"@radix-ui/react-select": "^2.1.1",
+		"@radix-ui/react-toast": "^1.2.2",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tanstack/react-router": "^1.34.0",
 		"axios": "^1.7.2",
+		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^3.6.0",
 		"dayjs": "^1.11.11",
 		"effector": "^23.2.2",
 		"effector-react": "^23.2.1",
-		"firebase": "^10.14.0",
+		"firebase": "^11.0.1",
+		"lucide-react": "^0.460.0",
+		"next-themes": "^0.4.4",
 		"patronum": "^2.2.0",
 		"react": "^18.3.1",
 		"react-day-picker": "^9.0.8",
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.51.5",
+		"sonner": "^1.7.1",
 		"tailwind-merge": "^2.3.0",
 		"vite-plugin-svgr": "^4.2.0",
 		"zod": "^3.23.8"
