--- a/package.json
+++ b/package.json
@@ -14,55 +14,57 @@
 	"type": "module",
 	"license": "ISC",
 	"devDependencies": {
-		"@chromatic-com/storybook": "^1.6.0",
-		"@storybook/addon-essentials": "^8.1.11",
-		"@storybook/addon-interactions": "^8.1.11",
-		"@storybook/addon-links": "^8.1.11",
-		"@storybook/addon-onboarding": "^8.1.11",
-		"@storybook/blocks": "^8.1.11",
-		"@storybook/react": "^8.1.11",
-		"@storybook/react-vite": "^8.1.11",
-		"@storybook/test": "^8.1.11",
-		"@tanstack/router-devtools": "^1.34.4",
-		"@tanstack/router-vite-plugin": "^1.33.12",
-		"@types/node": "^20.14.8",
-		"@types/react": "^18.3.3",
-		"@types/react-dom": "^18.3.0",
-		"@typescript-eslint/eslint-plugin": "^7.10.0",
-		"@typescript-eslint/parser": "^7.10.0",
-		"@typescript-eslint/utils": "^7.10.0",
-		"@vitejs/plugin-react": "^4.3.1",
-		"autoprefixer": "^10.4.19",
-		"eslint": "^8.57.0",
-		"eslint-plugin-effector": "0.12.0",
-		"eslint-plugin-storybook": "^0.8.0",
-		"postcss": "^8.4.38",
-		"prettier": "^3.2.5",
-		"storybook": "^8.1.11",
-		"tailwindcss": "^3.4.4",
-		"typescript": "^5.4.5",
-		"vite": "^5.2.11",
+		"@chromatic-com/storybook": "^1.9.0",
+		"@storybook/addon-essentials": "^8.4.6",
+		"@storybook/addon-interactions": "^8.4.6",
+		"@storybook/addon-links": "^8.4.6",
+		"@storybook/addon-onboarding": "^8.4.6",
+		"@storybook/blocks": "^8.4.6",
+		"@storybook/react": "^8.4.6",
+		"@storybook/react-vite": "^8.4.6",
+		"@storybook/test": "^8.4.6",
+		"@tanstack/router-devtools": "^1.85.0",
+		"@tanstack/router-plugin": "^1.84.4",
+		"@tanstack/router-vite-plugin": "^1.84.4",
+		"@types/node": "^20.17.9",
+		"@types/react": "^18.3.12",
+		"@types/react-dom": "^18.3.1",
+		"@vitejs/plugin-react": "^4.3.4",
+		"autoprefixer": "^10.4.20",
+		"postcss": "^8.4.49",
+		"prettier": "^3.4.1",
+		"storybook": "^8.4.6",
+		"tailwindcss": "^3.4.15",
+		"typescript": "^5.7.2",
+		"vite": "^5.4.11",
 		"vite-tsconfig-paths": "^4.3.2"
 	},
 	"dependencies": {
-		"@hookform/resolvers": "^3.4.2",
-		"@radix-ui/react-scroll-area": "^1.1.0",
-		"@radix-ui/react-select": "^2.1.1",
+		"eslint": "^8.57.1",
+		"@eslint/js": "^9.16.0",
+		"eslint-plugin-effector": "0.12.0",
+		"eslint-plugin-storybook": "^0.8.0",
+		"@typescript-eslint/eslint-plugin": "^7.18.0",
+		"@typescript-eslint/parser": "^7.18.0",
+		"@typescript-eslint/utils": "^7.18.0",
+		"@hookform/resolvers": "^3.9.1",
+		"@radix-ui/react-scroll-area": "^1.2.1",
+		"@radix-ui/react-select": "^2.1.2",
 		"@tailwindcss/container-queries": "^0.1.1",
-		"@tanstack/react-router": "^1.34.0",
-		"axios": "^1.7.2",
+		"@tanstack/react-router": "^1.85.0",
+		"axios": "^1.7.8",
 		"clsx": "^2.1.1",
 		"date-fns": "^3.6.0",
-		"dayjs": "^1.11.11",
-		"effector": "^23.2.2",
+		"dayjs": "^1.11.13",
+		"effector": "^23.2.3",
 		"effector-react": "^23.2.1",
-		"patronum": "^2.2.0",
+		"patronum": "^2.3.0",
 		"react": "^18.3.1",
-		"react-day-picker": "^9.0.8",
+		"react-day-picker": "^9.4.0",
 		"react-dom": "^18.3.1",
-		"react-hook-form": "^7.51.5",
-		"tailwind-merge": "^2.3.0",
-		"vite-plugin-svgr": "^4.2.0",
+		"react-hook-form": "^7.53.2",
+		"tailwind-merge": "^2.5.5",
+		"vite-plugin-svgr": "^4.3.0",
 		"zod": "^3.23.8"
 	}
 }
