--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@radix-ui/react-popover": "^1.1.4",
 		"@radix-ui/react-scroll-area": "^1.2.2",
 		"@radix-ui/react-select": "^2.1.4",
+		"@radix-ui/react-switch": "^1.1.2",
 		"@radix-ui/react-toast": "^1.2.2",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tanstack/react-router": "^1.85.0",
