--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
 	"singleQuote": true,
 	"trailingComma": "none",
 	"semi": true,
-	"printWidth": 120
+	"printWidth": 120,
+	"plugins": ["prettier-plugin-tailwindcss"]
 }
