--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"@hookform/resolvers": "^3.9.1",
 		"@radix-ui/react-dialog": "^1.1.4",
 		"@radix-ui/react-collapsible": "^1.1.2",
+		"@radix-ui/react-dialog": "^1.1.4",
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-label": "^2.1.1",
 		"@radix-ui/react-popover": "^1.1.4",
@@ -54,6 +55,7 @@
 		"@radix-ui/react-slot": "^1.1.1",
 		"@radix-ui/react-tabs": "^1.1.2",
 		"@radix-ui/react-switch": "^1.1.2",
+		"@radix-ui/react-tabs": "^1.1.2",
 		"@radix-ui/react-toast": "^1.2.2",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tanstack/react-router": "^1.85.0",
