--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 	"dependencies": {
 		"@eslint/js": "^9.16.0",
 		"@hookform/resolvers": "^3.9.1",
+		"@radix-ui/react-collapsible": "^1.1.2",
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-popover": "^1.1.4",
 		"@radix-ui/react-scroll-area": "^1.2.2",
