--- a/nginx.conf
+++ b/nginx.conf
@@ -1,31 +1,20 @@
-# Запускать в качестве менее привилегированного пользователя по соображениям безопасности..
- user                         nginx;
-
-# Значение auto устанавливает число максимально доступных ядер CPU,
-# чтобы обеспечить лучшую производительность.
- worker_processes             auto;
-
-events {
-    worker_connections        1024;
-}
-
 http {
     server {
-        #                     Hide nginx version information.
-        server_tokens         off;
-
-        listen                80;
-        root                  /usr/share/nginx/html;
-        include               /etc/nginx/mime.types;
+        server_tokens off;
+        listen 80;
+        root /usr/share/nginx/html;
+        include /etc/nginx/mime.types;
 
         location / {
-            try_files         $uri $uri/ /index.html;
+            try_files $uri $uri/ /index.html;
+            add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+            expires off;
         }
 
-        gzip                  on;
-        gzip_vary             on;
-        gzip_http_version     1.0;
-        gzip_comp_level       5;
+        gzip on;
+        gzip_vary on;
+        gzip_http_version 1.0;
+        gzip_comp_level 5;
         gzip_types
         application/atom+xml
         application/javascript
@@ -42,8 +31,8 @@ http {
         text/css
         text/plain
         text/x-component;
-        gzip_proxied          no-cache no-store private expired auth;
-        gzip_min_length       256;
-        gunzip                on;
-
-    }}
+        gzip_proxied no-cache no-store private expired auth;
+        gzip_min_length 256;
+        gunzip on;
+    }
+}
