--- a/package.json
+++ b/package.json
@@ -38,15 +38,14 @@
 		"tailwindcss": "^3.4.15",
 		"typescript": "^5.7.2",
 		"vite": "^5.4.11",
+		"vite-plugin-html": "^3.2.2",
 		"vite-tsconfig-paths": "^4.3.2"
 	},
 	"dependencies": {
 		"@eslint/js": "^9.16.0",
 		"@hookform/resolvers": "^3.9.1",
-
-		"@radix-ui/react-dialog": "^1.1.4",
-
 		"@radix-ui/react-collapsible": "^1.1.2",
+		"@radix-ui/react-dialog": "^1.1.4",
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-label": "^2.1.1",
 		"@radix-ui/react-popover": "^1.1.4",
@@ -54,8 +53,8 @@
 		"@radix-ui/react-scroll-area": "^1.2.2",
 		"@radix-ui/react-select": "^2.1.4",
 		"@radix-ui/react-slot": "^1.1.1",
-		"@radix-ui/react-tabs": "^1.1.2",
 		"@radix-ui/react-switch": "^1.1.2",
+		"@radix-ui/react-tabs": "^1.1.2",
 		"@radix-ui/react-toast": "^1.2.2",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tanstack/react-router": "^1.85.0",
