fix nginx, return what missed

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,16 +1,39 @@
+# Запускать в качестве менее привилегированного пользователя по соображениям безопасности.
+user nginx;
+
+# Значение auto устанавливает число максимально доступных ядер CPU,
+# чтобы обеспечить лучшую производительность.
+worker_processes auto;
+
+events {
+    worker_connections 1024;
+}
+
 http {
     server {
+        # Скрываем информацию о версии nginx.
         server_tokens off;
+
         listen 80;
         root /usr/share/nginx/html;
         include /etc/nginx/mime.types;
 
+        # Основной location для обработки запросов
         location / {
             try_files $uri $uri/ /index.html;
+            # Отключаем кеширование для index.html и динамических запросов
             add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
             expires off;
         }
 
+        # Отдельный location для статических файлов с долгосрочным кешированием
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            try_files $uri $uri/ /index.html;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+
+        # Настройки сжатия
         gzip on;
         gzip_vary on;
         gzip_http_version 1.0;
