--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,7 @@
 		"alwaysStrict": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"exactOptionalPropertyTypes": true,
+		"exactOptionalPropertyTypes": false,
 		"noImplicitReturns": true,
 		"noUncheckedIndexedAccess": true
 	},
