--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"@radix-ui/react-switch": "^1.1.2",
 		"@radix-ui/react-tabs": "^1.1.2",
 		"@radix-ui/react-toast": "^1.2.2",
+		"@react-input/mask": "^2.0.4",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tanstack/react-router": "^1.85.0",
 		"@typescript-eslint/eslint-plugin": "^7.18.0",
